# api_server_in_c

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
DB/: Dockerfile
dotenv/: dotenv.c  dotenv.h
middleware/: auth.c  auth.h
src/: main.c
